--- a/STM32Cube/MDK-ARM/Ninja-CubeMX-v-3-2.uvprojx
+++ b/STM32Cube/MDK-ARM/Ninja-CubeMX-v-3-2.uvprojx
@@ -333,7 +333,7 @@
               <MiscControls>--C99</MiscControls>
               <Define>USE_HAL_DRIVER,STM32F207xx</Define>
               <Undefine />
-              <IncludePath>../Inc;          ../Drivers/STM32F2xx_HAL_Driver/Inc;          ../Drivers/STM32F2xx_HAL_Driver/Inc/Legacy;          ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;          ../Middlewares/Third_Party/FreeRTOS/Source/include;          ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;          ../Drivers/CMSIS/Include;          ../Drivers/CMSIS/Device/ST/STM32F2xx/Include</IncludePath>
+              <IncludePath>../Inc;                       ../Drivers/STM32F2xx_HAL_Driver/Inc;                       ../Drivers/STM32F2xx_HAL_Driver/Inc/Legacy;                       ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;                       ../Middlewares/Third_Party/FreeRTOS/Source/include;                       ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;                       ../Drivers/CMSIS/Include;                       ../Drivers/CMSIS/Device/ST/STM32F2xx/Include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -421,11 +421,12 @@
               <FileType>1</FileType>
               <FilePath>../Src/stm32f2xx_it.c</FilePath>
             </File>
-          <File>
+            <File>
               <FileName>dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Src/dma.c</FilePath>
-            </File></Files>
+            </File>
+          </Files>
         </Group>
         <Group>
           <GroupName>Drivers/CMSIS</GroupName>
